[gd_scene load_steps=3 format=3 uid="uid://cquooy1bktwwt"]

[ext_resource type="Script" uid="uid://cgaao7txp045h" path="res://scripts/slicer.gd" id="1_0ye4o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3d2cl"]
radius = 650.0

[node name="ShapeCast2D" type="ShapeCast2D"]
shape = SubResource("CircleShape2D_3d2cl")
target_position = Vector2(0, 0)
collision_mask = 4
script = ExtResource("1_0ye4o")

[node name="Pivot" type="Marker2D" parent="."]

[node name="SliceSprite" type="Sprite2D" parent="Pivot"]

[node name="SliceContainer" type="Node" parent="."]

[node name="FiringSpeed" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="FiringSpeed" to="." method="_on_firing_speed_timeout"]
